--- a/master/src/main/resources/webapp/success.html
+++ b/master/src/main/resources/webapp/success.html
@@ -1,6 +1,6 @@
-<html >
+<html>
 <head>success</head>
 <body>
-    Hello ${user.username}!"World"!
+    Hello ${user.username}"World"!
 </body>
 </html>
